<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <string name="app_name">TelephonyCarrierPack</string>
    <string name="device_info">DeviceInfo</string>
    <string name="device_info_unknown">Unknown</string>
    <string name="model_number">Model number</string>
    <string name="hardware_version">HW VERSION</string>
    <string name="software_version">SW VERSION</string>
    <string name="device_brand">Brand</string>
    <string name="sdnListLabel">SDN list</string>
    <string name="callTo">Call</string>
    <string name="sendTextMessage">Send SMS</string>
    <string name="simContacts_emptyLoading">Reading from SIM card\u2026</string>
    <string name="simContacts_empty">No contacts on your SIM card.</string>
    <string name="title_activity_sdn_list">SdnList</string>
    <string name="simContacts_airplaneMode">To import contacts from the SIM card, first turn off Airplane mode.</string>
    <string name="result">Result</string>
    <string name="data_usage_notification">Some applications require a data connection and may imply an additional cost. We suggest that you subscribe to an Internet data plan. Consult your Service Provider for details.</string>
    <string name="datausage_dialog">Don\'t show this message again</string>
    <string name="data_usage">Data usage</string>
    <string name="preferred_networks">Preferred networks</string>
    <string name="plmn_list_empty">PLMN list in SIM is not present or empty</string>
    <string-array name="plmn_name" translatable="false">
        <item>Claro</item>
        <item>T-Mobile</item>
        <item>CLARO PA</item>
        <item>CLAROCHL</item>
        <item>CLARODOM</item>
        <item>CLARO UY</item>
        <item>CLARO PY</item>
        <item>CLARO AR</item>
        <item>Claro</item>
        <item>Claro</item>
        <item>CLAROGTM</item>
        <item>ClaroPER</item>
        <item>CLARO</item>
        <item>ClaroSLV</item>
        <item>ClaroHND</item>
        <item>ClaroNIC</item>
        <item>CLARO CR</item>
        <item>TELCEL</item>
        <item>A1</item>
        <item>NL KPN</item>
        <item>FL1</item>
        <item>Si.mobil</item>
        <item>Mtel</item>
        <item>VIP</item>
        <item>BASE</item>
        <item>Vip MKD</item>
        <item>VELCOM</item>
        <item>Vip SRB</item>
    </string-array>
    <string-array name="plmn_mcc_mnc" translatable="false">
        <item>330110</item>
        <item>310260</item>
        <item>71403</item>
        <item>73003</item>
        <item>37002</item>
        <item>74810</item>
        <item>74402</item>
        <item>722310</item>
        <item>72405</item>
        <item>732101</item>
        <item>70401</item>
        <item>71610</item>
        <item>74001</item>
        <item>70601</item>
        <item>708001</item>
        <item>71021</item>
        <item>71203</item>
        <item>334020</item>
        <item>23212</item>
        <item>20408</item>
        <item>29505</item>
        <item>29340</item>
        <item>28401</item>
        <item>21910</item>
        <item>20620</item>
        <item>29403</item>
        <item>25701</item>
        <item>22005</item>
    </string-array>
    <string name="emergencyDialerButtonLabel">Emergency Dialer</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="label_nsdp">SIM network subset unlock PIN</string>
    <string name="label_cdp">SIM corporate unlock PIN</string>
    <string name="label_spdp">SIM service provider unlock PIN</string>
    <string name="label_sdp">SIM unlock PIN</string>
    <string name="label_rn1dp">RUIM network1 unlock PIN</string>
    <string name="label_rn2dp">RUIM network2 unlock PIN</string>
    <string name="label_rhrpd">RUIM hrpd unlock PIN</string>
    <string name="label_rcdp">RUIM corporate unlock PIN</string>
    <string name="label_rspdp">RUIM service provider unlock PIN</string>
    <string name="label_rdp">RUIM unlock PIN</string>
    <string name="label_puk">Enter PUK</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting SIM network unlock\u2026</string>
    <string name="requesting_nw_subset_unlock">Requesting SIM network subset unlock\u2026</string>
    <string name="requesting_sp_unlock">Requesting SIM service provider unlock\u2026</string>
    <string name="requesting_corporate_unlock">Requesting SIM corporate unlock\u2026</string>
    <string name="requesting_sim_unlock">Requesting SIM unlock\u2026</string>
    <string name="requesting_rnw1_unlock">Requesting RUIM network1 unlock\u2026</string>
    <string name="requesting_rnw2_unlock">Requesting RUIM network2 unlock\u2026</string>
    <string name="requesting_rhrpd_unlock">Requesting RUIM hrpd unlock\u2026</string>
    <string name="requesting_rsp_unlock">Requesting RUIM service provider unlock\u2026</string>
    <string name="requesting_rc_unlock">Requesting RUIM corporate unlock\u2026</string>
    <string name="requesting_ruim_unlock">Requesting RUIM unlock\u2026</string>
    <string name="requesting_puk_unlock">Requesting PUK unlock\u2026</string>
    <string name="unlock_failed">SIM Network unlock request unsuccessful.</string>
    <string name="nw_subset_unlock_failed">SIM Network Subset unlock request unsuccessful.</string>
    <string name="sp_unlock_failed">SIM Service Provider unlock request unsuccessful.</string>
    <string name="corporate_unlock_failed">SIM Corporate unlock request unsuccessful.</string>
    <string name="sim_unlock_failed">SIM unlock request unsuccessful.</string>
    <string name="rnw1_unlock_failed">RUIM Network1 unlock request unsuccessful.</string>
    <string name="rnw2_unlock_failed">RUIM Network2 unlock request unsuccessful.</string>
    <string name="rhrpd_unlock_failed">RUIM Hrpd unlock request unsuccessful.</string>
    <string name="rsp_unlock_failed">RUIM Service Provider unlock request unsuccessful.</string>
    <string name="rc_unlock_failed">RUIM Corporate unlock request unsuccessful.</string>
    <string name="ruim_unlock_failed">RUIM unlock request unsuccessful.</string>
    <string name="puk_unlock_failed">PUK unlock unsuccessful.</string>
    <string name="unlock_success">SIM Network unlock successful.</string>
    <string name="nw_subset_unlock_success">SIM Network Subset unlock successful.</string>
    <string name="sp_unlock_success">SIM Service Provider unlock successful.</string>
    <string name="corporate_unlock_success">SIM Corporate unlock successful.</string>
    <string name="sim_unlock_success">SIM unlock successful.</string>
    <string name="rnw1_unlock_success">RUIM Network1 unlock successful.</string>
    <string name="rnw2_unlock_success">RUIM Network2 unlock successful.</string>
    <string name="rhrpd_unlock_success">RUIM Hrpd unlock successful.</string>
    <string name="rsp_unlock_success">RUIM Service Provider unlock successful.</string>
    <string name="rc_unlock_success">RUIM Corporate unlock successful.</string>
    <string name="ruim_unlock_success">RUIM unlock successful.</string>
    <string name="puk_unlock_success">PUK unlock successful.</string>
    <string name="perso_lock">Lock</string>
    <string name="perso_success_message">Personalization Successful</string>
    <string name="perso_failure_message">Personalization Failed. <xliff:g id="remaining_retry">%s</xliff:g> attempt remaining</string>
    <string name="perso_text_length_message">Please enter <xliff:g id="pin_length">%s</xliff:g> char pin.</string>
    <string name="perso_success_msg">Network personalization is successful</string>
    <string name="perso_failure_msg">Network personalization is failed. You have <xliff:g id="retry">%s</xliff:g> remaining attempts.</string>
    <string name="perso_internal_failure_msg">Network personalization is failed with internal error</string>
    <string name="processing_text">Requesting network personalization lock\u2026</string>
    <string name="ok">OK</string>
    <string name="input_code">Input code</string>
    <string name="incorrect_code">Incorrect code</string>
    <string name="oem_key_code_action">org.codeaurora.carrier.ACTION_TELEPHONY_OEM_CODES</string>
    <string name="oem_code">android.intent.extra.OEM_KEY_STRING</string>
    <string name="internal_device_info">InternalDeviceInfo</string>
    <string name="device_branch">Branch</string>
    <string name="build">Build</string>
    <string name="build_number">Build number</string>
    <string name="serial_number">Serial number</string>
    <string name="time">Build Time</string>
    <string name="master_clear_desc">Erase all your personal information and downloaded apps? You can\u2019t undo this action!</string>
    <string name="master_clear_positive_button">Erase all</string>
    <string name="master_clear_negative_button">Cancel</string>
    <string name="master_clear_title">Factory data reset</string>
</resources>