<!--
Copy right (c) 2015 Qualcomm Technologies, Inc.
All Rights Reserved.
Confidential and Proprietary - Qualcomm Technologies, Inc.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- for device branch -->
    <Preference android:key="device_branch"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/device_branch"
        android:summary="@string/device_info_unknown"
        android:persistent="false" />
    <!-- for device build version -->
    <Preference android:key="build"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/build"
        android:summary="@string/device_info_unknown"
        android:persistent="false" />
    <!-- for build number -->
    <Preference android:key="build_number"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/build_number"
        android:summary="@string/device_info_unknown"
        android:persistent="false" />
    <!-- for serial number -->
    <Preference android:key="serial_number"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/serial_number"
        android:summary="@string/device_info_unknown"
        android:persistent="false" />
    <!-- for build time -->
    <Preference android:key="build_time"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/time"
        android:summary="@string/device_info_unknown"
        android:persistent="false" />
</PreferenceScreen>

