<!--
Copy right (c) 2015 Qualcomm Technologies, Inc.
All Rights Reserved.
Confidential and Proprietary - Qualcomm Technologies, Inc.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- for device brand -->
    <Preference android:key="device_brand"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/device_brand"
        android:summary="@string/device_info_unknown"
        android:persistent="false" />
    <!-- for device model version -->
    <Preference android:key="device_model"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/model_number"
        android:summary="@string/device_info_unknown"
        android:persistent="false" />
    <!-- for hardware version -->
    <Preference android:key="hardware_version"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/hardware_version"
        android:summary="@string/device_info_unknown"
        android:persistent="false" />
    <Preference android:key="software_version"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/software_version"
        android:summary="@string/device_info_unknown"
        android:persistent="false" />
</PreferenceScreen>
